--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -5,6 +5,7 @@ on: push
 env:
   IMAGE: "ghcr.io/team-base64/edu-crm-backend-app"
   CONTAINER: "backend"
+  ENV_FILE: ".backend-env"
 
 permissions:
   contents: read
@@ -27,3 +28,19 @@ jobs:
           context: .
           push: true
           tags: ${{ env.IMAGE }}:latest
+  deploy:
+    if: contains(github.event.head_commit.message, '[DEPLOY]')
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          script_stop: true
+          script: |
+            cd ${{ secrets.TARGET_DOCKER_COMPOSE }}
+            echo "${{ secrets.BACKEND_ENV }}" > ${{ env.ENV_FILE }}
+            sed -i '/DRONE_SSH_PREV_COMMAND_EXIT_CODE/d' ${{ env.ENV_FILE }}
+            docker compose up -d --no-deps --force-recreate ${{ env.CONTAINER }}
+            docker system prune -af --volumes
