--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -29,6 +29,7 @@ jobs:
           push: true
           tags: ${{ env.IMAGE }}:latest
   deploy:
+    needs: build
     if: contains(github.event.head_commit.message, '[DEPLOY]')
     runs-on: ubuntu-22.04
     steps:
